// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventService create 1`] = `undefined`;

exports[`EventService create 2`] = `
{
  "id": "1234",
  "image": {
    "filename": "123.webp",
    "id": "123",
  },
  "imageId": "123",
  "name": "Foo",
}
`;

exports[`EventService delete 1`] = `undefined`;

exports[`EventService delete 2`] = `
{
  "id": "1234",
  "image": {
    "filename": "123.webp",
    "id": "123",
  },
  "imageId": "123",
  "name": "Foo",
}
`;

exports[`EventService event 1`] = `
[
  "123",
]
`;

exports[`EventService event 2`] = `
[
  "1234",
]
`;

exports[`EventService event 3`] = `
{
  "id": "1234",
  "image": {
    "filename": "123.webp",
    "id": "123",
  },
  "imageId": "123",
  "name": "name",
}
`;

exports[`EventService events 1`] = `undefined`;

exports[`EventService events 2`] = `
{
  "nodes": [
    {
      "id": "1234",
      "image": null,
      "imageId": null,
      "name": "Foo",
    },
  ],
  "pageInfo": {
    "endCursor": "1234",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "123",
  },
  "totalCount": 100,
}
`;

exports[`EventService update 1`] = `undefined`;

exports[`EventService update 2`] = `
{
  "id": "1234",
  "image": {
    "filename": "123.webp",
    "id": "123",
  },
  "imageId": "123",
  "name": "Bar",
}
`;
